testdata/npzone.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: all-in-zone-v12
spec:
  podSelector:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.olig.ch/zone: v12
